feat: update box designs and images across files
- Add 10 boxes to the html file
- Change background images of some boxes
- Rename two image files
- Add background images to some boxes in less, scss, and stylus files

Signed-off-by: stevecyj <ycsteven.tsao@gmail.com>

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,5 +1,12 @@
-.box2{
+.box2 {
   width: 100px;
   height: 100px;
-    background-color: deeppink;
+  background-color: deeppink;
+}
+
+.box7 {
+  width: 100px;
+  height: 100px;
+  background-image: url(../images/3c9c676480ee09c888f9a882beb6549d.jpeg);
+  background-size: cover;
 }
