--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -2,3 +2,9 @@
   width: 100px
   height: 100px
   background-color: orange
+
+.box9
+  width: 100px
+  height: 100px
+  background-image: url(../images/tree.png)
+  background-size: cover
