--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -2,3 +2,9 @@
   width 100px
   height 100px
   background-color yellow
+
+.box10
+  width 100px
+  height 100px
+  background-image: url('../images/psychedelic.webp')
+  background-size: cover
