--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,5 +7,10 @@
 .box6 {
   width: 100px;
   height: 100px;
-  background-color: blue;
+  background-image: url(../images/1684721783382.jpg);
+  background-size: cover;
+}
+
+.df {
+  display: flex;
 }
