--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,3 +3,10 @@
   height: 100px;
   background-color: lightpink;
 }
+
+.box8 {
+  width: 100px;
+  height: 100px;
+  background-image: url(../images/cardano-sirspudsalot.gif);
+  background-size: cover;
+}
